@@ -2,20 +2,19 @@ package lib.command;
 
 import lib.form.Form;
 import lib.form.PersonCreationFormCreator;
-import server.runtime.Context;
-import server.manager.PersonManager;
 import lib.schema.Location;
 import lib.schema.Person;
+import server.manager.PersonManager;
+import server.runtime.Context;
 import server.schema.User;
 
 import java.io.PrintWriter;
 import java.io.Serializable;
 import java.sql.SQLException;
 import java.util.LinkedHashSet;
-import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.ResourceBundle;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 public class RemoveAllByLocationCommand extends Command {
 
@@ -35,7 +34,7 @@ public class RemoveAllByLocationCommand extends Command {
     }
 
     @Override
-    public void exec(PrintWriter printWriter, String[] args, Serializable objectArgument, Context context, User user) {
+    public boolean exec(PrintWriter printWriter, String[] args, Serializable objectArgument, Context context, User user) {
         PersonManager personManager = context.getPersonManager();
 
         Location specifiedLocation = (Location) objectArgument;
@@ -45,18 +44,17 @@ public class RemoveAllByLocationCommand extends Command {
         int removedElementCount = 0;
 
         var idsToRemove = persons
-            .stream()
-            .filter(
-                p -> {
-                    Location l = p.getLocation();
-                    if (l == null) {
-                        return false;
-                    }
-                    return l.equals(specifiedLocation);
-                }
-            )
-            .map(Person::getID)
-            .collect(Collectors.toList());
+                .stream()
+                .filter(
+                        p -> {
+                            Location l = p.getLocation();
+                            if (l == null) {
+                                return false;
+                            }
+                            return l.equals(specifiedLocation);
+                        }
+                )
+                .map(Person::getID).toList();
 
         for (int idToRemove : idsToRemove) {
             boolean deleted;
@@ -64,15 +62,18 @@ public class RemoveAllByLocationCommand extends Command {
                 deleted = context.getDB().deletePersonByID(user, idToRemove);
             } catch (SQLException e) {
                 printWriter.println("DB error: " + e.getMessage());
-                return;
+                return false;
             }
             if (deleted) {
-                personManager.removeByID(idToRemove);
-                removedElementCount++;
+                try {
+                    personManager.removeByID(idToRemove);
+                    removedElementCount++;
+                } catch (NoSuchElementException ignored) {}
             }
         }
 
         printWriter.println("Removed " + removedElementCount + " element(s).");
+        return true;
     }
 
     @Override
